--- a/production/ob_plan.html
+++ b/production/ob_plan.html
@@ -67,12 +67,7 @@
                 <h3>Modules</h3>
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-phone"></i> OutBound <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="ob_campaign.html">Campaign</a></li>
-                      <li><a href="ob_plan.html">Plan</a></li>
-                      <li><a href="ob_destination.html">Destination</a></li>
-                      <li><a href="ob_dlma.html">Dlma</a></li>
-                    </ul>
+                    <ul class="nav child_menu" id="menu_outbound"></ul> 
                   </li>
                 </ul>
               </div>
@@ -430,6 +425,9 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js"></script>
+
+    <!-- -->
+    <script src="./js/menu/side_bar.js"></script>
 
     <!-- -->
     <script src="./js/ob/ob_plan.js"></script>
